# discovery-signal-scout-widget

./: .gitignore  README.md  index.html
.github/workflows/: ci.yml  daily-agent.yml  deploy-widget.yml
agent/: Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt  signal_scout_excel_enhanced.py
agent/.github/workflows/: ci.yml
agent/data/: auto_keywords.xlsx.b64
agent/signal_scout/: archetypes.py  classifiers.py  cli.py  collectors.py  config.py  dedupe.py  llm_ensemble.py  persistence.py  render.py  scoring.py  utils.py
agent/tests/: conftest.py  test_shortlist.py  test_summary.py
assets/: index-CEii8__-.js  index-CEii8__-.js.map
widget/: README.md  SignalScoutWidget.tsx  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
